--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
         "serve": "^14.2.5",
         "tslib": "^2.8.1",
         "typescript": "^5.9.2"
+    },
+    "dependencies": {
+        "xlsx": "^0.18.5"
     }
 }
